src/parser/snapshots/monkey_language_server__parser__test__array_happy_2.snap
---
source: src/parser/test.rs
description: "[1,\"foo\",3];"
expression: result
---
[
    Array {
        token: Token(LBracket, "[", (0,0)->(0,1)),
        elems: Ok(
            [
                Ok(
                    Int {
                        token: Token(Int, "1", (0,1)->(0,2)),
                        value: 1,
                    },
                ),
                Ok(
                    StringLiteral {
                        token: Token(Str, "\"foo\"", (0,3)->(0,8)),
                        value: "\"foo\"",
                    },
                ),
                Ok(
                    Int {
                        token: Token(Int, "3", (0,9)->(0,10)),
                        value: 3,
                    },
                ),
            ],
        ),
        range: Range {
            start: Position {
                line: 0,
                character: 0,
            },
            end: Position {
                line: 0,
                character: 11,
            },
        },
    },
]

===================================

[1,"foo",3];
