src/parser/snapshots/monkey_language_server__parser__test__array_happy_3.snap
---
source: src/parser/test.rs
description: "[1,\"foo\",fn(x) { x + 1 }];"
expression: result
---
[
    Array {
        token: Token(LBracket, "[", (0,0)->(0,1)),
        elems: Ok(
            [
                Ok(
                    Int {
                        token: Token(Int, "1", (0,1)->(0,2)),
                        value: 1,
                    },
                ),
                Ok(
                    StringLiteral {
                        token: Token(Str, "\"foo\"", (0,3)->(0,8)),
                        value: "\"foo\"",
                    },
                ),
                Ok(
                    Function {
                        token: Token(Function, "fn", (0,9)->(0,11)),
                        params: Ok(
                            [
                                Ok(
                                    Identifier {
                                        token: Token(Identifier, "x", (0,12)->(0,13)),
                                        name: "x",
                                    },
                                ),
                            ],
                        ),
                        body: Ok(
                            Block {
                                token: Token(LBrace, "{", (0,15)->(0,16)),
                                statements: [
                                    Infix {
                                        token: Token(Plus, "+", (0,19)->(0,20)),
                                        left: Identifier {
                                            token: Token(Identifier, "x", (0,17)->(0,18)),
                                            name: "x",
                                        },
                                        right: Int {
                                            token: Token(Int, "1", (0,21)->(0,22)),
                                            value: 1,
                                        },
                                        operator: Plus,
                                    },
                                ],
                                start: (0,15),
                                end: (0,23),
                            },
                        ),
                    },
                ),
            ],
        ),
    },
]

===================================

[1,"foo",fn(x) { x + 1 }];
