src/parser/snapshots/monkey_language_server__parser__test__array_index_happy_2.snap
---
source: src/parser/test.rs
description: "foo[add(3)]"
expression: result
---
[
    Index {
        token: Token(LBracket, "[", (0,3)->(0,4)),
        object: Identifier {
            token: Token(Identifier, "foo", (0,0)->(0,3)),
            name: "foo",
        },
        index: Ok(
            Call {
                token: Token(LParen, "(", (0,7)->(0,8)),
                func: Identifier {
                    token: Token(Identifier, "add", (0,4)->(0,7)),
                    name: "add",
                },
                args: Ok(
                    [
                        Ok(
                            Int {
                                token: Token(Int, "3", (0,8)->(0,9)),
                                value: 3,
                            },
                        ),
                    ],
                ),
                range: Range {
                    start: Position {
                        line: 0,
                        character: 7,
                    },
                    end: Position {
                        line: 0,
                        character: 10,
                    },
                },
            },
        ),
        range: Range {
            start: Position {
                line: 0,
                character: 0,
            },
            end: Position {
                line: 0,
                character: 11,
            },
        },
    },
]

===================================

foo[add(3)]
