src/parser/snapshots/monkey_language_server__parser__test__array_index_happy_3.snap
---
source: src/parser/test.rs
description: "foo[1+2]"
expression: result
---
[
    Index {
        token: Token(LBracket, "[", (0,3)->(0,4)),
        object: Identifier {
            token: Token(Identifier, "foo", (0,0)->(0,3)),
            name: "foo",
        },
        index: Ok(
            Infix {
                token: Token(Plus, "+", (0,5)->(0,6)),
                left: Int {
                    token: Token(Int, "1", (0,4)->(0,5)),
                    value: 1,
                },
                right: Int {
                    token: Token(Int, "2", (0,6)->(0,7)),
                    value: 2,
                },
                operator: Plus,
                range: Range {
                    start: Position {
                        line: 0,
                        character: 5,
                    },
                    end: Position {
                        line: 0,
                        character: 7,
                    },
                },
            },
        ),
    },
]

===================================

foo[1+2]
