src/parser/snapshots/monkey_language_server__parser__test__array_index_unhappy_2.snap
---
source: src/parser.rs
description: "foo[1+"
expression: stmts
---
[
    Err(UnexpectedEof("SyntaxError: Unexpected eof."), (0,5)->(0,6)),
]
