src/parser/snapshots/monkey_language_server__parser__test__array_index_unhappy_4.snap
---
source: src/parser.rs
description: "foo[1,2]"
expression: stmts
---
[
    Err(ExpectedTokenNotFound("SyntaxError: Expected ']' not found."), (0,5)->(0,6)),
]
